CHANGES
=======

* Update tests
* Add CLI options and allow \`force\`ed nuking

0.1.3
-----

* Fix version setter and log msg formatting

0.1.2
-----

* Fix malformed README

0.1.1
-----

* Fix the package name on PyPI

0.1.0
-----

* Fix entry-point and switch to logging

0.0.2
-----

* Add basic nuking
* Update deploy key and temp hardcode version
* Update deploy key and temp hardcode version
* Initial commit
* Initial commit